# chair

./: .gitignore  CLAUDE.md  README.md  build.sh  package.sh  setup-mono.bat  setup.bat
.claude/: settings.local.json
audio-engine/: CMakeLists.txt  build.sh
audio-engine/src/: analysis.cpp  analysis.h  capture.cpp  capture.h  classifier.cpp  classifier.h  clip_logger.cpp  clip_logger.h  ipc.cpp  ipc.h  main.cpp
launcher/: main.c
overlay-ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayUI.csproj  PipeClient.cs  PolarRingControl.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
tools/: review_clips.py
